--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,13 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@300&display=swap');
+
+body {
+     background-color: ;
+}
+
 header {
      display: block;
 }
 
 .top-container {
      display: flex;
-     justify-content: space-evenly;
+     max-width: 100%;
+     justify-content: space-around;
+     margin: 5px;
+     padding: 10px;
+     border-bottom: 5px solid black;
+
 }
+
+#homeicon {
+     font-family: 'Inter', sans-serif;
+     font-size: 28pt;
+}
+
+#start {
+     font-family: 'Inter', sans-serif;
+     font-size: 14pt;
+     position: relative;
+     top: 20px;
+}
+
+.homelinks {
+     display: flex;
+     font-family: 'Inter', sans-serif;
+     font-size: 12pt;
+     width: 80px;
+     padding:5px;
+     flex-flow: nowrap;
+     margin: 5px;
+     position: absolute;
+     left: 500px;
+     justify-content: space-between;
+     letter-spacing: 1px;
+}
+
+#login {
+     font-family: 'Inter', sans-serif;
+     font-size: 14pt;
+     position: relative;
+     top: 20px;
+     left: 310px;
+}
+/* #home, #about, #products, #contacts, #login {
+     font-family: 'Inter', sans-serif;
+     font-size: 14pt; */
+}
+
+#start {
+     font-family: 'Inter', sans-serif;
+     font-size: 18pt;
+}
+
+#home, #about, #products, #contacts {
+     position: relative;
+     width: 50px;
+     flex-shrink: ;
+     padding-left: 50px;
+     padding-right: 50px;
+     margin-top: 10px;
+}
+
+#login {
+     padding-left: 80px;
+     padding-right: 40px;
+}
+
+.background {
+     width: 100%;
+     position: fixed;
+     top: 100px;
+     background-image: url(https://ibb.co/LkFQsM7);
+
+}
+
+.background 
 
 /* .img {
      background-image: url(https://ibb.co/LkFQsM7);
