--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -77,14 +77,37 @@ header {
 }
 
 .background {
-     width: 100%;
-     position: fixed;
+     width: 100;
+     height: fit-content;
+     position: absolute;
+     padding: 50px;
+     margin: 5px;
      top: 100px;
-     background-image: url(https://ibb.co/LkFQsM7);
+     left: 300px;
+     background-image: url(https://ibb.co/LkFQsM7) repeat 0 0;
 
 }
 
-.background 
+background:first-child {
+     font-family: 'Inter', sans-serif;
+     font-size: 18pt;
+}
+
+h2 {
+     font-size: 14pt;
+}
+
+h3 {
+     position: relative;
+     width: 180px;
+     top: 15px;
+     text-align:center;
+     background-color: #ED661F;
+     padding: 30px;
+     padding-left: 1px;
+     padding-right: 1px;
+     /* padding: 25px 0px 20px 25px; */
+}
 
 /* .img {
      background-image: url(https://ibb.co/LkFQsM7);
