--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@300&display=swap');
 
-/* body {
+body {
      background-color: black ;
-} */
+}
 
 header {
      display: block;
@@ -32,6 +32,7 @@ header {
      color: whitesmoke;
      position: relative;
      top: 20px;
+     left: 500px;
 }
 
 .homelinks {
@@ -55,7 +56,7 @@ header {
      color: whitesmoke;
      position: relative;
      top: 20px;
-     left: 310px;
+     left: 650px;
 }
 /* #home, #about, #products, #contacts, #login {
      font-family: 'Inter', sans-serif;
@@ -83,14 +84,15 @@ header {
 
 #background_container {
      background-image: url(https://ibb.co/LkFQsM7);
-     height:400px;
+     /* height:400px; */
      /* background-color: #ED661F; */
      background-repeat: no-repeat;
      /* background-position: center; */
      background-size: cover;
 }
 
-#background_container {
+.background_container {
+     background-color: #8f4d29;
      width: 1300px;
      height: 400px;
      position: absolute;
@@ -101,13 +103,16 @@ header {
 
 }
 
-background:first-child {
+h1{
      font-family: 'Inter', sans-serif;
-     font-size: 18pt;
+     font-size: 24pt;
+     height: 100px;
 }
 
 h2 {
-     font-size: 14pt;
+     position: relative;
+     top: 15px;
+     font-size: 18pt;
      color: whitesmoke;
 }
 
@@ -115,7 +120,7 @@ h3 {
      color: whitesmoke;
      position: relative;
      width: 180px;
-     top: 15px;
+     top: 30px;
      text-align:center;
      background-color: #ED661F;
      padding: 30px;
@@ -128,35 +133,36 @@ h3 {
      background-image: url(https://ibb.co/LkFQsM7);
 } */
 
-/* .customers {
+.customers {
      background-color: #ED661F;
      display: flex;
      align-content: center;
-     position: absolute;
+     position: relative;
+     top: 520px;
+     right: 350px;
      justify-content: space-evenly;
+     align-items: center;
      font-family: 'Inter', sans-serif;
      font-size: 12pt;
-     margin: 2px;
      border: 1px;
      padding: 10px;
-     padding-bottom: 1px;
-     width: 550px;
-     height: 300px;
+     width: 600px;
+     height: 100px;
      text-align: center;
-} */
+}
 
 span {
      display: block;
      /* word-wrap: break-word; */
-     /* width: 150px; */
+     width: 150px;
      white-space: normal;
 }
 
-table {
+/* table {
      font-family: 'Inter', sans-serif;
      font-size: 12pt;
      border-collapse: collapse;
      text-align: center;
      width: 550px;
      height: 300px;
-}
+} */
