--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@300&display=swap');
+
 main {
     display: flex;
+    justify-content: space-evenly;
+    /* align-content: flex-start; */
+    align-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: fit-content;
+    margin: 150px;
+}
+
+.top_container {
+    max-width: 80%;
+    font-family: 'inter','sans serif';
+    max-height: 100px;
+    position:relative;
+    bottom: 20px;
+    left: 5vh;
+    text-align: left;
+    justify-content: space-around;
+}
+
+#homeicon {
+
 }
