--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -77,7 +77,7 @@ header {
     padding: 0px 20px;
 }
 
-.nav_links li as {
+.nav_links li a {
     transition: all 0.3s ease 0s;
 }
 
@@ -108,27 +108,39 @@ button:hover {
 
 main {
     display: flex;
+    justify-content: flex-start;
+    /* align-items: center; */
     flex-direction: column;
 }
 
 .flexbox-item {
+    position: relative;
+    left: 5vw;
     max-width: 100%;
     height: max-content;
-    font-size: 18pt;
+}
+
+main :first-child {
+    
 }
 
 h1{
     position: relative;
-    top: 3vh;
+    margin: 20px 5px;
+    border: 5px;
+    /* padding:20px; */
+    top: 2vh;
     font-family: 'Inter', sans-serif;
-    font-size: 24pt;
-    height: 150px;
+    font-size: 50pt;
+    font-weight: 500;
 }
 
 h2 {
     position: relative;
-    top: 5vh;
-    font-size: 18pt;
+    bottom: 40px;
+    /* left: 15px; */
+    top: 3vh;
+    font-size: 28pt;
     color: rgb(0, 0, 0);
 }
 
@@ -136,7 +148,9 @@ h3 {
     color: whitesmoke;
     position: relative;
     width: 180px;
-    top: 50px;
+    top: 80px;
+    font-family: "Inter", 'sans-serif';
+    font-size: 18pt;
     text-align:center;
     background-color: #ED661F;
     padding: 30px;
@@ -145,12 +159,92 @@ h3 {
     /* padding: 25px 0px 20px 25px; */
 }
 
-#img3 {
+.section1 {
+    background-image: url("assets/images/image 1.png");
+    background-size: cover;
+    background-size: contain;
+    width: 100%;
+    height: fit-content;
+    background-repeat: no-repeat;
+}
+span {
+     display: block;
+     /* justify-content: space-around; */
+     position: relative;
+     /* word-wrap: break-word; */
+     height: 50px;
+     white-space: normal;
+}
+
+em {
+    display: block;
     position: relative;
-    width: 400px;
-    height: 250px;
+    top: 100px;
+}
+
+rem {
+    display: block;
+    position: relative;
+    left: 100px;
+}
+
+.customers {
+    display:flex;
+    background-color: #ED661F;
+    word-wrap: wrap;
+    align-content:center;
+    position: absolute;
+    text-align: left;
+    top: 750px;
+    left: 600px;
+    /* left: 2in; */
+    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 20pt;
+    padding: 10px;
+    border: 2px;
+    width: 850px;
+    height: 180px;
+    text-align: center;
+}
+
+.why {
+    display: block;
+    position: relative;
+    width: 100%;
+    padding: 50px;
+    margin: 50px 10px;
+    height: 150px;
+    top: 25em;
+}
+
+.why > h {
+    border-bottom: 5px;
+    border-color: #ED661F;
+    font-family: "Inter", 'sans-serif';
+    font-weight: 700;
+    font-size: 28pt;
+
+
+}
+
+.why > p {
+    font-family: "Inter", 'sans-serif';
+    font-size: 18pt;
+    color: #81898b;
+    line-height: 30px;
+}
+
+#img3 {
+    position: absolute;
+    font-family: "Poppins", 'sans-serif';
+    left: 50vw;
+    width: 600px;
+    height: 400px;
     padding: 20px;
-    float: right;
+    /* float: right; */
 }
 
 /* .top_container {
