--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -166,6 +166,12 @@ span {
      white-space: normal;
 }
 
+em {
+     display: block;
+     position: relative;
+     top: 50px;
+}
+
 /* table {
      font-family: 'Inter', sans-serif;
      font-size: 12pt;
@@ -195,10 +201,6 @@ span {
      justify-content: flex-start;
     
     
-}
-em {
-     position:absolute;
-     top: 50px;
 }
 
 .why > h {
