--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@300&display=swap');
 
-/* main {
+ /* main {
     display: flex;
     position: relative;
-    /* height: 200vh; */
+    height: 200vh;
     justify-content:flex-start;
     align-items: center;
-    /* align-content: flex-start; */
+    align-content: flex-start;
     flex-wrap: wrap;
    
-}
+} */
 
-body {
+/* body {
     height: 500vh;
-}
+    background-color: black;
+} */
 
 * {
     box-sizing: border-box;
@@ -363,15 +364,28 @@ rem {
 }
 
 .customer-feedback {
+    position: absolute;
+    top: 40vh;
+    
+}
+
+.customer-feedback > h6 {
+    font-family: "Poppins", 'sans-serif';
+    font-size: 20pt;
+    float: left;
+}
+
+#Rebbecca, #John, #Lavington {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    width: 40%;
-    height: 600px;
-    position: absolute;
-    left: -100vw;
-    top: 80vh;
 }
+/* 
+#John {
+    position: absolute;
+    top: 400vh;
+} */
+
+
 
 #feedback1, #feedback2, #feedback3 {
     width: 50px;
@@ -379,6 +393,54 @@ rem {
     float: inline-end;
 }
 
+#read-more {
+    display: border-box;
+    position: relative;
+    top: 15px;
+    text-align: right;
+    font-family: "Inter", 'sans-serif';
+    font-size: 24;
+    border-bottom: 5px #ED661F;
+}
+
+.communications {
+    display: flex;
+    /* flex-grow: 1; */
+    text-align: center;
+    position: absolute;
+    width: 90vw;
+    height: 20vh;
+    color:#ffffff;
+    padding: 50px 10px;
+    top: 30vh;
+    left: -32vw;
+    background-color: black;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.communications > h {
+    font-family: "Inter", 'sans-serif';
+    font-size: 28pt;
+}
+
+.communications > p {
+    font-family: "Inter", 'sans-serif';
+
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    width: 90vw;
+    height: 20vh;
+    color:#ffffff;
+    padding: 100px 10px;
+    background-color: black;
+    position: absolute;
+    top: 60vh;
+    flex-direction: row;
+    max-width: 50vw;
+}
 
 
 
